force-app/main/default/objects/ozbee__Production_Job__c/ozbee__Production_Job__c.object-meta.xml
<CustomObject>
    <label>Production Job</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Production Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>