force-app/main/default/objects/ozbee__Production_Job__c/fields/Crew_Members__c.field-meta.xml
<CustomField>
    <fullName>Crew_Members__c</fullName>
    <label>Crew Members</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>