force-app/main/default/objects/ozbee__Production_Job__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <label>Total Squares Complete %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>